Fixed bottom chat bar for viewing older messages - jump to present

--- a/src/components/redesign.css
+++ b/src/components/redesign.css
@@ -532,8 +532,45 @@
       }
     }
 
+    /* hover menu/quick menu */
     .popoverReactionHoverBar_f84418 {
       background-color: var(--background-secondary);
+    }
+  }
+
+  /* viewing old messages bottom bar */
+  .bottomBar__0f481 {
+    background-color: color-mix(
+      in srgb,
+      var(--background-accent) 98%,
+      transparent
+    );
+    border: none;
+    min-height: 24px;
+    min-width: unset;
+    width: auto;
+    box-shadow: var(--shadow-ledge);
+    border-radius: 8px 8px 0 0;
+    bottom: 0;
+    margin: 0;
+
+    .button__201d5 {
+      background-color: inherit;
+      color: inherit;
+      padding: 0;
+
+      &::after {
+        content: "";
+        display: inline-block;
+        margin-left: var(--space-8);
+        margin-bottom: var(--space-4);
+        width: 16px;
+        height: 16px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23ffffff' d='M5.3 9.3a1 1 0 011.4 0l5.3 5.29 5.3-5.3a1 1 0 111.4 1.42l-6 6a1 1 0 01-1.4 0l-6-6a1 1 0 010-1.42z'/%3E%3C/svg%3E");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+      }
     }
   }
 
